chamber/css/base.css
/* ... */
header button {
  color: white;
  font-size: 2rem;
  margin-top: 1.5rem;
  background-color: var(--secondary-color);
  border: 1px solid rgba(0,0,0,0.5);
  width: 3rem;
  height: 3rem;
}

header button:hover {
  background-color: #1D3461;
}

#threeImageMain {
  display: flex;
  gap: 0.25rem;
}
#spotLightTwo {
  display: none;
}


#hamburgernav.open {
  display: block;
}




/* this is for the button open to be the lines closed to have the X */
/*nth-child alows you to access the diffent spans in the html <button id="hamburgerBtn"><span>&#9776;</span><span>X</span></button> */
#hamburgerbtn.open span:nth-child(1) {display: none;}
#hamburgerbtn.open span:nth-child(2) {display: block;}
#hamburgerbtn span:nth-child(1) {display: block;}
#hamburgerbtn span:nth-child(2) {display: none;} /* <span>X</span> does not show*/




.logo img {
  width: 10rem;
}

.logo { 
  display: flex;
  align-items: center;
}

.currentdate {
  background-color: var(--accent2-color);
  padding: 1rem;
  border: 1px solid rgba(0,0,0,0.5);
  text-align: center;
}

.social {
  margin-top: 1.5rem;
  display: inline;
}
.social img {
  width: 3rem;
}




.footerbuild {
  display: block;
  margin: 0;
  margin-bottom: 1rem;
  display: flex;
  justify-content: space-between;
  flex-direction: column;
  align-items: center;
}

.footerbuild a:link {
  color: black;
  background-cgq olor: transparent;
  text-decoration: none;
  font-weight: bold;
  font-size: large;
}

.footerheadings, .footercontact{

  font-weight: bold;
  font-size: large;
}

.footerbuild a:visited {
  color: var(--active-link);
  background-color: transparent;
  text-decoration: none;
}
.footerbuild a:hover {
  background-color: rgba(0,0,0,0.1);
}

.footercontact {
  text-align: center;
  margin-left: 1rem;
  margin-right: 1rem;
}

.footerlogo {
  display: block;
  align-items: center;
  text-align: center;
  margin-bottom: 1rem;
}

.footerheadings {
  display: block;
}
.footerlogo img {
  width: 12.5rem;
}
.footmaps img{
  width: 2rem;
}
.footercontact img{
  width: 2rem;
}

.copyrightupdatesmall, .copyrightupdatemedium, .copyrightupdatelarge{
  display: block;
  text-align: center;
  padding-top: 0.5rem;
  border-top: 1px solid rgba(0,0,0,0.5);
}
.copyrightupdatesmall {
  display: block;
  text-align: center;
}
.copyrightupdatemedium {
  display: none;
  text-align: center;
}
.copyrightupdatelarge {
  display: none;
  text-align: center;
}


/* for the discover page */
/*discover page

.lazypics {
	display: flex;
  align-items: center;
  flex-direction: column;
	gap: 15em;	
}

.lastload {
  margin-bottom: 15%;
}*/


#carnival_dis, #tablemountain_dis, #otter_dis, #ctstadium_dis,#wine_dis {
  display: none;
}


#discovermain img{
  padding: 2%;
  width: 96%;
}

#discovermain h3, #discoverhead h2{
  background-color: var(--accent2-color);
  margin: 1%;
  border: 1px solid rgba(0,0,0,0.5);
  text-align: center;
  background-color: var(--accent2-color);
  padding: 1rem;
  }

.statupdate img {
  background-color: var(--primary-dark);
  width: 96%;
}



#discovermain {
  display: block;
  grid-template-columns: 1fr;

}

#discoverhead {
  border: 1px solid rgba(0,0,0,0.5);
  color: var(--accent1-color);
  padding: 2%;
  border-radius: 25px;
}

/*thankyou page*/

#thankyou {
  display: grid;
  gap: 0.5rem;
  grid-template-rows: 1fr 0.1fr 0.5fr 0.5fr;
  background-color: var(--accent1-color)
}


/*Join Page */



#detailedinformation {
  display: none;em
}

#join_head{ /*heading */
  border: 1px solid rgba(0,0,0,0.5);
  color: var(--accent1-color);
  padding: 2%;
  border-radius: 25px;
  text-align: center;
}

form input:required {
  border-left: red solid 10px;
}

#membershipapp {
  padding: 2%;
  display: grid;
  gap: 0.5rem;
  grid-template-columns: 1fr;
  background-color: var(--accent1-color)
}

.information-form legend {
  font-size: 25px;
  text-align: center;
}


.information-form { /* all 3 blocks on the page */
  border: 3px solid var(--primary-dark);
  grid-column: 1;
  background: white;
}

.information-form label{
  display: block;
  padding: 2%;
  font-size: 24px;
}

.membership-form {
	margin-bottom: 2rem;
}

.selection {
  display: grid;
  grid-template-columns: 0.5fr 1fr;
  align-items: center;
}

.information {
  grid-column: 2;
  grid-row: 2;
}

form textarea {
  height: 10rem;
}

.selection input[type="Radio"]  {
  width: 25px;
  height: 25px;
  margin: 1rem;
  align-content: flex-end;
}

.bus-info input[type="text"], .bus-info input[type="textarea"],  .infoform input[type="text"],  .infoform input[type="tel"] ,  .infoform input[type="email"]{
  font-size: 24px;
  width: 96%;
}

.bus-info textarea {
  width: 96%;
}


.legend {
  font-size: 16px;

}
.membership-form label[for="goldm"], label[for="silverm"] {
  color: gold;
  font-weight: bold;
  font-size: 28px;
}
.membership-form  label[for="silverm"] {
  color: silver;
}
.membership-form  label[for="bronzem"] {
  color: rgb(176, 141, 87);
  font-weight: bold;
}
.membership-form  label[for="np"] {
  color: var(--secondary-color);
}





/*table on join page */
table {
  letter-spacing: 5px;
  padding: 0%;
  margin: 0px auto;
  padding: 5px;
  box-sizing: border-box;
} 
table, th, td {
  border: 1px solid black;
}
tbody tr:nth-child(1) {
  background-color: gold;
}  
tbody tr:nth-child(4) {
  background-color: silver;
}  
tbody tr:nth-child(7) {
  background-color: rgb(176, 141, 87);
}
tbody tr:nth-child(10) {
  background-color: var(--secondary-color);
  color: white;
}

.detailedinformation li {
  text-align: left;
}


  /*Join.html button */


  .subappBtn {
    padding: 2rem;
    background-color: rgba(220, 220, 220, 0.5);
    color: var(--main-text);
    text-decoration: none;
    border: 1px solid  rgba(0,0,0,0.5);
    outline: 1px solid var(--secondary-color);
    margin-top: 5%;
    margin-left: 10%;
    width: 80%;
  }
/* ... */

